--- a/ShopApp.WebUI/Views/Admin/ProductCreate.cshtml
+++ b/ShopApp.WebUI/Views/Admin/ProductCreate.cshtml
@@ -6,11 +6,12 @@
 <div class="row">
     <div class="col-md-8">
         <form method="post" asp-controller="Admin" asp-action="ProductCreate">
-
+            <div class="text-danger" asp-validation-summary="All"></div>
             <div class="form-group row">
                 <label asp-for="Name" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Name">
+                    <span class="text-danger" asp-validation-for="Name"></span>
                 </div>
             </div>
 
@@ -18,6 +19,7 @@
                 <label asp-for="Url" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Url">
+                    <span class="text-danger" asp-validation-for="Url"></span>
                 </div>
             </div>
 
@@ -25,6 +27,7 @@
                 <label asp-for="Description" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <textarea class="form-control" asp-for="Description"></textarea>
+                    <span class="text-danger" asp-validation-for="Description"></span>
                 </div>
             </div>
 
@@ -32,6 +35,7 @@
                 <label asp-for="Price" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Price">
+                    <span class="text-danger" asp-validation-for="Price"></span>
                 </div>
             </div>
 
@@ -39,6 +43,7 @@
                 <label asp-for="ImageUrl" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="ImageUrl">
+                    <span class="text-danger" asp-validation-for="ImageUrl"></span>
                 </div>
             </div>
 
