--- a/ShopApp.WebUI/Views/Admin/ProductEdit.cshtml
+++ b/ShopApp.WebUI/Views/Admin/ProductEdit.cshtml
@@ -5,12 +5,18 @@
 
 <form asp-controller="Admin" asp-action="ProductEdit" method="post">
     <div class="row">
+        <div class="col-md-12">
+            <div class="text-danger" asp-validation-summary="All"></div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-8">
             <input type="hidden" name="ProductId" value="@Model.ProductId" />
             <div class="form-group row">
                 <label asp-for="Name" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Name">
+                    <span class="text-danger" asp-validation-for="Name"></span>
                 </div>
             </div>
 
@@ -18,6 +24,7 @@
                 <label asp-for="Url" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Url">
+                    <span class="text-danger" asp-validation-for="Url"></span>
                 </div>
             </div>
 
@@ -25,6 +32,7 @@
                 <label asp-for="Description" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <textarea class="form-control" asp-for="Description"></textarea>
+                    <span class="text-danger" asp-validation-for="Description"></span>
                 </div>
             </div>
 
@@ -32,6 +40,7 @@
                 <label asp-for="Price" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="Price">
+                    <span class="text-danger" asp-validation-for="Price"></span>
                 </div>
             </div>
 
@@ -39,6 +48,7 @@
                 <label asp-for="ImageUrl" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input class="form-control" asp-for="ImageUrl">
+                    <span class="text-danger" asp-validation-for="ImageUrl"></span>
                 </div>
             </div>
 
@@ -51,11 +61,18 @@
 
         </div>
         <div class="col-md-4">
-            @foreach (var item in (List<Category>)ViewBag.Categories)
+
+            @for (int i = 0; i < Model.SelectedCategories.Count; i++)
+            {
+                <input type="hidden" name="SelectedCategories[@i].CategoryId" value="@Model.SelectedCategories[@i].CategoryId"/>
+                <input type="hidden" name="SelectedCategories[@i].Name" value="@Model.SelectedCategories[@i].Name"/>
+            }
+
+                @foreach (var item in (List<Category>)ViewBag.Categories)
             {
                 <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" 
-                           name="categoryIds" 
+                    <input type="checkbox" class="custom-control-input"
+                           name="categoryIds"
                            value="@item.CategoryId"
                            id="category_@(item.CategoryId)"
                            @(Model.SelectedCategories.Any(i => i.CategoryId == item.CategoryId) ? "checked" : "")>
