--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -1,24 +1,50 @@
 ﻿  
   <div class="navbar bg-primary navbar-dark navbar-expand-sm">
-        <div class="container">
-            <a href="/" class="navbar-brand">ShopApp</a>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a href="/products" class="nav-link">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Cart</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Sifarişlər</a>
-                </li>
-                <li class="nav-item">
-                    <a href="/admin/products" class="nav-link">Admin Products</a>
-                </li>
+      <div class="container">
+          <a href="/" class="navbar-brand">ShopApp</a>
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                  <a href="/products" class="nav-link">Products</a>
+              </li>
+              @if (User.Identity.IsAuthenticated)
+              {
+                  <li class="nav-item">
+                      <a href="" class="nav-link">Cart</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="" class="nav-link">Sifarişlər</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="/admin/products" class="nav-link">Admin Products</a>
+                  </li>
 
-                <li class="nav-item">
-                    <a href="/admin/categories" class="nav-link">Admin Categories</a>
-                </li>
-            </ul>
-        </div>
+                  <li class="nav-item">
+                      <a href="/admin/categories" class="nav-link">Admin Categories</a>
+                  </li>
+              }
+              </ul>
+
+          <ul class="navbar-nav ml-auto">
+
+              @if (User.Identity.IsAuthenticated)
+              {
+                  <li class="nav-item">
+                      <a href="/account/manage" class="nav-link">@User.Identity.Name</a>
+                  </li>
+
+                  <li class="nav-item">
+                      <a href="/account/logout" class="nav-link">Çıxış</a>
+                  </li>
+              }
+              else
+              {
+                  <li class="nav-item">
+                      <a href="/account/login" class="nav-link">Giriş</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="/account/register" class="nav-link">Qeydiyyat</a>
+                  </li>
+              }
+          </ul>
+      </div>
     </div>
