--- a/ShopApp.WebUI/Views/_ViewImports.cshtml
+++ b/ShopApp.WebUI/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ShopApp.Entity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using ShopApp.WebUI.Models
+@using Microsoft.AspNetCore.Identity
 @using ShopApp.WebUI.Extensions
 
 @*//*@
