--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -14,15 +14,23 @@
                   <li class="nav-item">
                       <a href="" class="nav-link">Sifarişlər</a>
                   </li>
-                  <li class="nav-item">
-                      <a href="/admin/products" class="nav-link">Admin Products</a>
-                  </li>
 
-                  <li class="nav-item">
-                      <a href="/admin/categories" class="nav-link">Admin Categories</a>
-                  </li>
+                  @if (User.IsInRole("SuperAdmin"))
+                  {
+                      <li class="nav-item">
+                          <a href="/admin/products" class="nav-link">Admin Products</a>
+                      </li>
+
+                      <li class="nav-item">
+                          <a href="/admin/categories" class="nav-link">Admin Categories</a>
+                      </li>
+
+                      <li class="nav-item">
+                          <a href="/admin/role/list" class="nav-link">Admin Roles</a>
+                      </li>
+                  }
               }
-              </ul>
+          </ul>
 
           <ul class="navbar-nav ml-auto">
 
