--- a/ShopApp.WebUI/Views/Shared/_product.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_product.cshtml
@@ -11,6 +11,15 @@
     </div>
     <div class="card-footer text-center">
         <a asp-controller="Shop" asp-action="Details" asp-route-url="@Model.Url" class="btn btn-primary btn-sm">İncələ</a>
-        <a asp-controller="Shop" asp-action="add to cart" asp-route-id="@Model.ProductId" class="btn btn-primary btn-sm">Karta Elave Et</a>
+        
+        @if(User.Identity.IsAuthenticated)
+            {
+                <form method="post" asp-controller="Cart" asp-action="AddToCart" style="display:inline;">
+                    <input type="hidden" name="ProducId" value="@Model.ProductId"/>
+                    <input type="hidden" name="quantity" value="1"/>
+                    <button type="submit" class="btn btn-primary btn-sm">Səbətə Əlavə Et</button>
+                </form>
+            }
+
     </div>
 </div>
