--- a/ShopApp.WebUI/Views/Shop/Details.cshtml
+++ b/ShopApp.WebUI/Views/Shop/Details.cshtml
@@ -19,7 +19,7 @@
          </h4>
 
          <form asp-controller="Cart" asp-action="AddToCart" method="post" class="form-inline">
-             <input type="hidden" name="ProducId" value="@Model.Product.ProductId" />
+             <input type="hidden" name="productId" value="@Model.Product.ProductId" />
              <div class="input-group mb-3">
                  <input type="number" class="form-control" name="quantity" value="1" min="1" step="1" style="width:100px;" />
                  <div class="input-group-append ">
