--- a/ShopApp.WebUI/Views/Shared/_product.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_product.cshtml
@@ -1,25 +1,23 @@
-﻿@using ShopApp.Entity
+﻿@model Product
 
-<div class="card mb-3">
+<div class="card mb-2">
     <img class="card-img-top" src="~/img/@Model.ImageUrl" alt="">
     <div class="card-body">
         <h5 class="card-title">@Model.Name</h5>
         <small class="text-muted">
-            <i class="fas fa-dollar-sign"></i>@Model.Price
-
+            <i class="fas fa-lira-sign"></i>@Model.Price
         </small>
     </div>
     <div class="card-footer text-center">
-        <a asp-controller="Shop" asp-action="Details" asp-route-url="@Model.Url" class="btn btn-primary btn-sm">İncələ</a>
-        
-        @if(User.Identity.IsAuthenticated)
-            {
-                <form method="post" asp-controller="Cart" asp-action="AddToCart" style="display:inline;">
-                    <input type="hidden" name="ProducId" value="@Model.ProductId"/>
-                    <input type="hidden" name="quantity" value="1"/>
-                    <button type="submit" class="btn btn-primary btn-sm">Səbətə Əlavə Et</button>
-                </form>
-            }
+        <a asp-controller="shop" asp-action="Details" asp-route-url="@Model.Url" class="btn btn-primary btn-sm">Details</a>
 
+        @if (User.Identity.IsAuthenticated)
+        {
+            <form asp-controller="Cart" asp-action="AddToCart" method="POST" style="display: inline;">
+                <input type="hidden" name="productId" value="@Model.ProductId">
+                <input type="hidden" name="quantity" value="1">
+                <button type="submit" class="btn btn-primary btn-sm">Səbətə Əlavə Et</button>
+            </form>
+        }
     </div>
-</div>
+</div>   
