--- a/ShopApp.WebUI/Views/Cart/Checkout.cshtml
+++ b/ShopApp.WebUI/Views/Cart/Checkout.cshtml
@@ -6,7 +6,8 @@
 <div class="row">
     <div class="col-md-8">
         <h4 class="mb-3">Əlaqə Məlumatları</h4>
-        <form method="post">
+        <form method="post" asp-controller="Cart" asp-action="Checkout">
+            <input type="hidden" name="cartId" value="0" />
             <div class="row mb-3">
                 <div class="col-md-6">
                     <label asp-for="@Model.FirstName"></label>
