--- a/ShopApp.WebUI/Views/Cart/Checkout.cshtml
+++ b/ShopApp.WebUI/Views/Cart/Checkout.cshtml
@@ -31,14 +31,42 @@
                 </div>
                 <div class="col-md-4">
                     <label asp-for="@Model.Phone">Əlaqə Nömrəsi</label>
-                    <input  asp-for="@Model.Phone" class="form-control" placeholder="+994XX XXX XX XX"/>
+                    <input asp-for="@Model.Phone" class="form-control" placeholder="+994XX XXX XX XX" />
                 </div>
                 <div class="col-md-4">
                     <label asp-for="@Model.Email">Email</label>
                     <input asp-for="@Model.Email" class="form-control" />
                 </div>
             </div>
+
+            <h4 class="Ödəniş Məlumatları"></h4>
             <hr class="mb-3" />
+            <div class="row mb-3">
+                <div class="col-md-6">
+                    <label asp-for="@Model.CardName"></label>
+                    <input asp-for="@Model.CardName" class="form-control" />
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="@Model.CardNumber"></label>
+                    <input asp-for="@Model.CardNumber" class="form-control" />
+                </div>
+            </div>
+
+            <div class="row mb-3">
+                <div class="col-md-4">
+                    <label asp-for="@Model.ExpirationMonth"></label>
+                    <input asp-for="@Model.ExpirationMonth" class="form-control" />
+                </div>
+                <div class="col-md-4">
+                    <label asp-for="@Model.ExpirationYear"></label>
+                    <input asp-for="@Model.ExpirationYear" class="form-control"  />
+                </div>
+                <div class="col-md-4">
+                    <label asp-for="@Model.CVV"></label>
+                    <input asp-for="@Model.CVV" class="form-control" />
+                </div>
+            </div>
+
             <button type="submit" class="btn btn-primary btn-lg btn-block">Təsdiqlə</button>
         </form>
     </div>
