--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -12,7 +12,7 @@
                       <a href="/cart" class="nav-link">Səbət</a>
                   </li>
                   <li class="nav-item">
-                      <a href="" class="nav-link">Sifarişlər</a>
+                      <a href="/orders" class="nav-link">Sifarişlər</a>
                   </li>
 
                   @if (User.IsInRole("Admin"))
